--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.1",
-    "express": "^4.17.2",
-    "mysql2": "^2.3.3",
-    "path": "^0.12.7",
-    "sequelize": "^6.13.0",
-    "sequelize-cli": "^6.3.0"
+    "body-parser": "1.19.1",
+    "express": "4.17.2",
+    "mysql2": "2.3.3",
+    "path": "0.12.7",
+    "sequelize": "6.13.0",
+    "sequelize-cli": "6.3.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "2.0.15"
   }
 }
